<resources>
    <string name="app_name">HelPy</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="click_here_to_create_one"> Click here to create one!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="name">Name</string>
    <string name="sirname">Surname</string>
    <string name="birth_date">Birth date</string>
    <string name="repeat_password">Repeat password</string>
    <string name="your_age">Your age</string>
    <string name="topic">Topic</string>
    <string name="describe_your_problem">Describe your problem...</string>
    <string name="post_now">Post Now</string>
</resources>