<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main2"
    android:layout_height="match_parent"
    android:background="@mipmap/backgroundsignup"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:textStyle="italic"
        android:layout_height="wrap_content"
        android:id="@+id/switchsignup"
        android:layout_marginTop="16dp"
        android:text="Public  "
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/profilepiccard"
            android:layout_marginBottom="5dp"
            android:background="#0A4474"
            app:cardCornerRadius="75dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <Button
                android:id="@+id/profilepicbut"
                android:background="@mipmap/defaultimg"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/namesignup"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/sirnamesignup"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="@string/sirname" />

        <EditText
            android:id="@+id/agesignup"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="@string/your_age"
            android:inputType="number" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/mailsignup"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passsignup"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/reppasssignup"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="@string/repeat_password"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/signupbut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:src="@mipmap/signupbut" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar
        android:id="@+id/progressbarsignup"
        style="?android:attr/progressBarStyle"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2" />


</androidx.constraintlayout.widget.ConstraintLayout>