<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#BFAC52"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="234dp"
        android:layout_height="156dp"
        android:src="@mipmap/pythonmed"
        app:layout_constraintBottom_toTopOf="@+id/topicedittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/topicedittext"
        android:layout_width="360dp"
        android:paddingStart="15dp"
        android:hint="@string/topic"
        android:maxLength="58"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edittextbackground"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/problemedittext"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbackground"
        android:gravity="bottom"
        android:hint="@string/describe_your_problem"
        android:lines="12"
        android:paddingStart="13dp"
        android:paddingBottom="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topicedittext"
        app:layout_constraintVertical_bias="0.083" />

    <Button
        android:id="@+id/postnowbichobutton"
        android:layout_width="215dp"
        android:layout_height="45dp"
        android:background="@drawable/addpostbuttonbackground"
        android:text="@string/post_now"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/problemedittext" />

</androidx.constraintlayout.widget.ConstraintLayout>